-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
RHEL 9.4 zfs server
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/faabd6b5-a956-42bd-a631-867ad6924185
test_63a failed with the following error:
failed grant check: client:700186624 server:368967680
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/105370 - 5.14.0-362.24.1.el9_3.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/105370 - 5.14.0-427.20.1_lustre.el9.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_63a - failed grant check: client:700186624 server:368967680
- is related to
-
LU-19418 sanity-quota test_58: Crashes with "tgt_grant.c:209:tgt_grant_sanity_check() LBUG"
-
- Open
-
-
LU-19445 sanity test_63a: FAIL: failed grant check: client:975822848 server:479395840
-
- Open
-
-
LU-14601 sanity test_64e: init grants: grants mismatch: 0, expected 2146304
-
- Open
-
-
LU-17404 Support RHEL 9.4
-
- Resolved
-
- mentioned in
-
Page Loading...