lustre/include/obd_support.h
@@ -355,6 +355,7 @@ extern bool obd_enable_fname_encoding;
 #define OBD_FAIL_OST_OPCODE		 0x253
 #define OBD_FAIL_OST_DELORPHAN_DELAY	 0x254
 #define OBD_FAIL_OST_ENOSPC_VALID	 0x255
+#define OBD_FAIL_OST_GRANT_PREPARE	 0x256
 
 #define OBD_FAIL_LDLM                    0x300
 #define OBD_FAIL_LDLM_NAMESPACE_NEW      0x301
